--- a/podcastrnext/src/pages/home.module.scss
+++ b/podcastrnext/src/pages/home.module.scss
@@ -40,11 +40,11 @@
           display: block;
           color: var(--gray-800);
           font-family: Lexend, sans-serif;
-          font-weight: 600;
-          text-decoration: none;
+          font-weight: 600; 
+          text-decoration: none;                   
           line-height: 1.4rem;
 
-          &hover {
+          &:hover {
             text-decoration: underline;
           }
         }
